# python-template-repository

./: .gitignore  .pre-commit-config.yaml  OWNERS  pyproject.toml
